# lunar-chess

./: .gitattributes  .gitignore  Cargo.toml
dynboard-gen/: Cargo.toml
dynboard-gen/src/: main.rs
src/: draw_arrow.rs  main.rs  stockfish.rs
trainer/: convert_to_onnx.py  main.py  pyproject.toml  test.py
trainer/runs/detect/train/: args.yaml  results.csv
trainer/runs/detect/train/weights/: best.onnx  best.pt  last.pt
