[package]
name = "lunar-chess"
version = "0.1.0"
edition = "2024"

# [workspace]
# members = [
# 	"dynboard-gen",
# ]

[target.'cfg(windows)'.dependencies]
opencv = "0.94.4"

[target.'cfg(windows)'.dependencies.windows]  
version = "0.61"
features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_LibraryLoader",
]

[dependencies]
ort = "1.16.3"
pixels = "0.15.0"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
winit = "0.30.10"
xcap = "0.5.2"
